<resources>
    <string name="app_name">AppyHighSubmission</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="item_image">Item Image</string>
    <string name="bottom_shadow">Bottom_Shadow</string>
    <string name="author">Author</string>
    <string name="article_data_image">article_data_image</string>
    <string name="_1st_january_2020">1st January 2020</string>
    <string name="headlines">Headlines</string>
    <string name="description">Description</string>
    <string name="source">Source</string>
    <string name="time">time</string>
    <string name="news_api">0319fd172da0452ab1b92c99f02e64dc"</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad">Ad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results_to_show">No Results to Show!</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="saved">Saved</string>
</resources>