<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/cardview_default_elevation"
        tools:ignore="PrivateResource">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/item_image"
                android:scaleType="centerCrop"
                android:transitionName="image" />

            <ImageView
                android:id="@+id/shadow_bottom"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignBottom="@id/item_image"
                android:contentDescription="@string/bottom_shadow"
                android:src="@drawable/bottom_shadow" />

            <ProgressBar
                android:id="@+id/image_progress"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp" />

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/item_image"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="160dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:gravity="bottom"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/author"
                android:textColor="@android:color/white" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_image"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_white"
                android:padding="5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/article_data_image"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/published_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_1st_january_2020"
                    android:textColor="#606060" />

            </FrameLayout>

            <TextView
                android:id="@+id/news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_image"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/headlines"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/news_title"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/description"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:text="@string/source"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/description"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/source"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:text="@string/time"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>