<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/error_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/errorScreen"
    android:paddingHorizontal="16dp"
    android:visibility="gone">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/no_result"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_image"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="@string/no_results_to_show"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/error_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_title"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="@string/please_check_your_internet_connection_and_try_again"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/error_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_dark"
        android:padding="5dp"
        android:text="@string/retry"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>